add revision page, put some of the config in the config file

--- a/dev.cfg
+++ b/dev.cfg
@@ -41,6 +41,12 @@ autoreload.package="loggerhead"
 # unexpected parameter. False by default
 tg.strict_parameters = True
 
+loggerhead.folder='/Users/robey/code/paramiko/paramiko'
+loggerhead.branch_name='paramiko-dev'
+loggerhead.external_url="http://localhost:8080"
+
+
+
 # LOGGING
 # Logging configuration generally follows the style of the standard
 # Python logging module configuration. Note that when specifying
@@ -63,3 +69,7 @@ level='INFO'
 qualname='turbogears.access'
 handlers=['access_out']
 propagate=0
+
+
+
+
