think harder about revision traversal, and make it work more deterministic- ally. :)  also add page next/prev buttons to the bottom of the "changes" view.

--- a/dev.cfg
+++ b/dev.cfg
@@ -43,6 +43,8 @@ tg.strict_parameters = True
 
 loggerhead.folder='/Users/robey/code/paramiko/paramiko'
 loggerhead.branch_name='paramiko-dev'
+#loggerhead.folder='/Users/robey/code/bzr/bzr.dev'
+#loggerhead.branch_name='bzr.dev'
 loggerhead.external_url="http://localhost:8080"
 
 
