add a caching system for revision/change entries, since those should never change, and stuff the history object into a global shared (locked) var so we don't rebuild the revision-graph cache on every page load.

--- a/dev.cfg
+++ b/dev.cfg
@@ -41,10 +41,11 @@ autoreload.package="loggerhead"
 # unexpected parameter. False by default
 tg.strict_parameters = True
 
-loggerhead.folder='/Users/robey/code/paramiko/paramiko'
-loggerhead.branch_name='paramiko-dev'
-#loggerhead.folder='/Users/robey/code/bzr/bzr.dev'
-#loggerhead.branch_name='bzr.dev'
+#loggerhead.folder='/Users/robey/code/paramiko/paramiko'
+#loggerhead.branch_name='paramiko-dev'
+loggerhead.folder='/Users/robey/code/bzr/bzr.dev'
+loggerhead.branch_name='bzr.dev'
+loggerhead.cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
 loggerhead.external_url="http://localhost:8080"
 
 
