don't use auto-reload cuz it causes 2 processes to try to access the same cache files :(

--- a/dev.cfg
+++ b/dev.cfg
@@ -32,14 +32,18 @@ sqlobject.dburi="sqlite://%(current_dir_uri)s/devdata.sqlite"
 # Enable the debug output at the end on pages.
 # log_debug_info_filter.on = False
 
-server.environment="development"
-autoreload.package="loggerhead"
+#server.environment="development"
+server.environment="production"
+#autoreload.package="loggerhead"
 
 # session_filter.on = True
 
 # Set to True if you'd like to abort execution if a controller gets an
 # unexpected parameter. False by default
 tg.strict_parameters = True
+
+# turn on timer scheduling
+tg.scheduler = True
 
 #loggerhead.folder='/Users/robey/code/paramiko/paramiko'
 #loggerhead.branch_name='paramiko-dev'
