fix a thread-unsafety bug in bzrlib's progress bar system that was vexing me, and do various cleanups on the ui for consistency.  added lots of locking to the history object before i figured out about the progress bar thing.

--- a/dev.cfg
+++ b/dev.cfg
@@ -51,6 +51,7 @@ loggerhead.folder='/Users/robey/code/bzr/bzr.dev'
 loggerhead.branch_name='bzr.dev'
 loggerhead.cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
 loggerhead.external_url="http://localhost:8080"
+loggerhead.bzrpath='/Users/robey/code/bzr/bzr'
 
 
 
