tone down the logging a bit

--- a/dev.cfg
+++ b/dev.cfg
@@ -55,12 +55,12 @@ tg.scheduler = True
 [[loggers]]
 [[[loggerhead]]]
 level='DEBUG'
-qualname='loggerhead'
+#qualname='loggerhead'
 handlers=['debug_out']
 
-[[[allinfo]]]
-level='INFO'
-handlers=['debug_out']
+#[[[allinfo]]]
+#level='INFO'
+#handlers=['debug_out']
 
 [[[access]]]
 level='INFO'
