add footer banners for bazaar and loggerhead, and slightly improve the config file docs.

--- a/loggerhead.conf
+++ b/loggerhead.conf
@@ -8,9 +8,10 @@ branch_name='bzr.dev'
 # doesn't already exist, we'll create it.
 cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
 
-# what url should i use in the atom feed, for external sites?
+# what is my externally-visible url? (for use in the atom feed)
 external_url="http://localhost:8080"
 
 # where's bzrlib?
+# (you only need this if you don't install bzr.)
 bzrpath='/Users/robey/code/bzr/bzr'
 
