the big migration of branch-specific data to a BranchView object: actually not so bad.  now all branch config is in a sub-object.

--- a/loggerhead.conf
+++ b/loggerhead.conf
@@ -1,17 +1,25 @@
 
-# where is the bazaar branch located, and what should we call it?
-folder='/Users/robey/code/bzr/bzr.dev'
-branch_name='bzr.dev'
-
-# should we cache revisions?  (HIGHLY recommended)  where?
-# this will be a folder containing a couple of files.  if the folder
-# doesn't already exist, we'll create it.
-cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
-
-# what is my externally-visible url? (for use in the atom feed)
-external_url="http://localhost:8080"
-
 # where's bzrlib?
 # (you only need this if you don't install bzr.)
 bzrpath='/Users/robey/code/bzr/bzr'
+
+# each branch is in a sub-folder of the website, and the config
+# key describes that folder name:
+[bazaar-dev]
+
+    # where is the bazaar branch located, and what should we call it?
+    folder='/Users/robey/code/bzr/bzr.dev'
+
+    # (optional) is there a friendier name for the branch that i should
+    # use on the web pages?
+    #branch_name='bazaar-dev'
+
+    # should we cache revisions?  (HIGHLY recommended)  where?
+    # this will be a folder containing a couple of files.  if the folder
+    # doesn't already exist, we'll create it.
+    cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
+
+    # what is my externally-visible url? (for use in the atom feed)
+    external_url="http://localhost:8080"
+
 
