add top-level page listing available branches.  also a patch from matty to not require external-url in atom feeds any more

--- a/loggerhead.conf
+++ b/loggerhead.conf
@@ -3,23 +3,34 @@
 # (you only need this if you don't install bzr.)
 bzrpath='/Users/robey/code/bzr/bzr'
 
-# each branch is in a sub-folder of the website, and the config
-# key describes that folder name:
-[bazaar-dev]
+# if you want a special title on the front page, set it here:
+title='branches in loggerhead'
 
-    # where is the bazaar branch located, and what should we call it?
-    folder='/Users/robey/code/bzr/bzr.dev'
+# group branches by project:
+[bazaar]
 
-    # (optional) is there a friendier name for the branch that i should
-    # use on the web pages?
-    #branch_name='bazaar-dev'
+    # name of this project
+    name = 'bazaar'
 
-    # should we cache revisions?  (HIGHLY recommended)  where?
-    # this will be a folder containing a couple of files.  if the folder
-    # doesn't already exist, we'll create it.
-    cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
+    # each branch is in a sub-folder of the website, and the config
+    # key describes that folder name:
+    [[bazaar-dev]]
 
-    # what is my externally-visible url? (for use in the atom feed)
-    external_url="http://localhost:8080"
+        # where is the bazaar branch located?
+        folder='/Users/robey/code/bzr/bzr.dev'
 
+        # (optional) is there a friendier name for the branch that i should
+        # use on the web pages?
+        #branch_name='bazaar-dev'
+
+        # (optional) short description for the top-level page
+        description="bazaar vcs development branch"
+
+        # (optional) public branch url for the top-level page
+        url='http://bazaar-ng.org/bzr/bzr.dev'
+
+        # should we cache revisions?  (HIGHLY recommended)  where?
+        # this will be a folder containing a couple of files.  if the folder
+        # doesn't already exist, we'll create it.
+        cachepath='/Users/robey/code/bzr/bzr.dev/.bzr/loggerhead-cache'
 
