use bzr.dev as the branch name now that it's okay

--- a/loggerhead.conf
+++ b/loggerhead.conf
@@ -14,7 +14,7 @@ title='branches in loggerhead'
 
     # each branch is in a sub-folder of the website, and the config
     # key describes that folder name:
-    [[bazaar-dev]]
+    [[bzr.dev]]
 
         # where is the bazaar branch located?
         folder='/Users/robey/code/bzr/bzr.dev'
