fix up dev.cfg so that nobody will ever have to edit it, by letting the important params be overridable in loggerhead.conf.
make start-loggerhead actually daemonize, write a pid file, and write logs
to normal log files, instead of requiring 'nohup' stuff.  ie act like a real
server.  added stop-loggerhead to do a clean shutdown.  changed the README
to clarify how it should work now.

--- a/dev.cfg
+++ b/dev.cfg
@@ -56,7 +56,7 @@ tg.scheduler = True
 [[[loggerhead]]]
 level='DEBUG'
 #qualname='loggerhead'
-handlers=['debug_out']
+#handlers=['debug_out']
 
 #[[[allinfo]]]
 #level='INFO'
@@ -65,8 +65,8 @@ handlers=['debug_out']
 [[[access]]]
 level='INFO'
 qualname='turbogears.access'
-handlers=['access_out']
-propagate=0
+#handlers=['access_out']
+#propagate=0
 
 
 
