--- a/loggerhead/config/log.cfg
+++ b/loggerhead/config/log.cfg
@@ -11,19 +11,19 @@ format='*(message)s'
 format='*(asctime)s *(name)s *(levelname)s *(message)s'
 
 [[handlers]]
-[[[debug_out]]]
-class='StreamHandler'
-level='DEBUG'
-args='(sys.stdout,)'
-formatter='full_content'
+#[[[debug_out]]]
+#class='FileHandler'
+#level='DEBUG'
+#args='("/tmp/log.log",)'
+#formatter='full_content'
 
-[[[access_out]]]
-class='StreamHandler'
-level='INFO'
-args='(sys.stdout,)'
-formatter='message_only'
+#[[[access_out]]]
+#class='StreamHandler'
+#level='INFO'
+#args='(sys.stdout,)'
+#formatter='message_only'
 
-[[[error_out]]]
-class='StreamHandler'
-level='ERROR'
-args='(sys.stdout,)'
+#[[[error_out]]]
+#class='StreamHandler'
+#level='ERROR'
+#args='(sys.stdout,)'
