add a '-C' option for ensuring loggerhead is running (from a cron job, for example), and clean up the main() code a bit in the process.  also added log rolling (daily, weekly, or none).

--- a/loggerhead.conf.example
+++ b/loggerhead.conf.example
@@ -12,6 +12,9 @@
 # if you want a special title on the front page, set it here:
 title = 'branches in loggerhead'
 
+# the access and debug logs can be set up to roll 'daily', 'weekly', or 'never':
+log.roll = 'weekly'
+
 # group branches by project:
 [bazaar]
 
