stab turbogears in the tortuously found correct place

--- a/dev.cfg
+++ b/dev.cfg
@@ -36,6 +36,8 @@ sqlobject.dburi="sqlite://%(current_dir_uri)s/devdata.sqlite"
 server.environment="production"
 #autoreload.package="loggerhead"
 
+decoding_filter.on = False
+
 # session_filter.on = True
 
 # Set to True if you'd like to abort execution if a controller gets an
