add a comment for spiv

--- a/dev.cfg
+++ b/dev.cfg
@@ -36,6 +36,8 @@ sqlobject.dburi="sqlite://%(current_dir_uri)s/devdata.sqlite"
 server.environment="production"
 #autoreload.package="loggerhead"
 
+# We do *not* want our query arguments turned into unicode strings (as
+# we use them for revision/file ids, and these must not be unicode).
 decoding_filter.on = False
 
 # session_filter.on = True
