Make it possible to override the interface loggerhead listens to. This is done by setting server.socket_host in the configuration file.

--- a/loggerhead.conf.example
+++ b/loggerhead.conf.example
@@ -5,6 +5,9 @@
 # use this if you're mapping loggerhead within apache via proxy
 #server.webpath = 'http://example.com/branches'
 
+# use this if you want loggerhead to listen to another interface than 127.0.0.1
+# server.socket_host = 'your_hostname_or_ip'
+
 # where's bzrlib?
 # (you only need this if you don't install bzr.)
 #bzrpath = '/Users/robey/code/bzr/bzr'
