* Remove homepage  * Remove release tarballs  * Remove push-website script  * Edit MANIFEST.in to reflect current content

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,2 @@
-include dev.cfg loggerhead.conf.example README.txt NEWS
-recursive-include loggerhead/templates *.kid
-recursive-include loggerhead/config *.cfg
+include loggerhead.conf.example README.txt NEWS
 recursive-include loggerhead/static *
