--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,11 @@
+Source: loggerhead
 Section: devel
 Priority: optional
 Maintainer: Debian Bazaar Maintainers <pkg-bazaar-maint@lists.alioth.debian.org>
 Uploaders: Jelmer Vernooij <jelmer@samba.org>
 Homepage: https://launchpad.net/loggerhead
 Build-Depends-Indep: bzr (>= 1.5)
-Build-Depends: python-central (>= 0.5), cdbs (>= 0.4.43), debhelper (>= 5.0.37.2), python-dev
+Build-Depends: python-central (>= 0.5), cdbs (>= 0.4.43), debhelper (>= 5.0.37.2), python-dev, python-turbogears
 Standards-Version: 3.8.0
 XS-Python-Version: >= 2.4
 Vcs-Bzr: http://bzr.debian.org/pkg-bazaar/loggerhead/unstable/
