--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: loggerhead
 Section: devel
 Priority: optional
 Maintainer: Debian Bazaar Maintainers <pkg-bazaar-maint@lists.alioth.debian.org>
-Uploaders: Jelmer Vernooij <jelmer@samba.org>
+Uploaders: Jelmer Vernooij <jelmer@debian.org>
 Homepage: https://launchpad.net/loggerhead
 Build-Depends-Indep: bzr (>= 1.5)
 Build-Depends: python-central (>= 0.5), cdbs (>= 0.4.43), debhelper (>= 5.0.37.2), python-dev
