--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Architecture: all
 Depends: bzr (>= 1.5), bzr (<< 2.3~), ${python:Depends}, python-simpletal, python-pkg-resources, python-paste (>= 1.6), libjs-yui, ${misc:Depends}, adduser
 Suggests: python-pastedeploy (>= 1.3.0)
 Enhances: bzr
-Recommends: bzr-search, python-simplejson
+Recommends: bzr-search, python-simplejson, python-pygments
 XB-Python-Version: ${python:Versions}
 Description: Web viewer for Bazaar
  This is a web viewer for projects in the Bazaar version control system. 
