--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,8 @@ Build-Depends-Indep: bzr (>= 1.5)
 Build-Depends: python-central (>= 0.5), cdbs (>= 0.4.43), debhelper (>= 5.0.37.2), python, python-pkg-resources, python-paste (>= 1.6)
 Standards-Version: 3.8.4
 XS-Python-Version: >= 2.4
-Vcs-Bzr: http://bzr.debian.org/pkg-bazaar/loggerhead/unstable/
+Vcs-Bzr: http://bzr.debian.org/bzr/pkg-bazaar/loggerhead/unstable/
+Vcs-Browser: http://bzr.debian.org/loggerhead/pkg-bazaar/loggerhead/unstable/files
 
 Package: loggerhead
 Architecture: all
