--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 install:
   - sudo apt install python-all subunit python-testtools adduser libjs-yui3-min
   - travis_retry pip install -U setuptools
-  - travis_retry pip install -U pip coverage codecov flake8 testtools configobj cython testscenarios six docutils python-subunit dulwich bzr+lp:brz pygments simplejson SimpleTAL paste
+  - travis_retry pip install -U pip coverage codecov flake8 testtools configobj cython testscenarios six docutils python-subunit dulwich bzr+lp:brz pygments simplejson paste http://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-4.3.tar.gz
 
 after_success:
   - codecov
