--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,24 @@ cache: pip
 git:
   depth: false
 
-python:
-  - 2.7
+matrix:
+  include:
+    - python: 2.7
+      env: TAL_VERSION=4.3
+    - python: 3.4
+      env: TAL_VERSION=5.2
+    - python: 3.5
+      env: TAL_VERSION=5.2
+    - python: 3.6
+      env: TAL_VERSION=5.2
 
 script:
-  - make check
+  - python -m coverage run -p -m unittest loggerhead.tests.test_suite
 
 install:
   - sudo apt install python-all subunit python-testtools adduser libjs-yui3-min
   - travis_retry pip install -U setuptools
-  - travis_retry pip install -U pip coverage codecov flake8 testtools configobj cython testscenarios six docutils python-subunit dulwich bzr+lp:brz pygments simplejson paste http://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-4.3.tar.gz
+  - travis_retry pip install -U pip coverage codecov flake8 testtools configobj cython testscenarios six docutils python-subunit dulwich bzr+lp:brz pygments simplejson paste http://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-$TAL_VERSION.tar.gz
 
 after_success:
   - codecov
