Don't depend on python3-simpletal, which is not available in Ubuntu yet.

--- a/byov.conf
+++ b/byov.conf
@@ -7,10 +7,11 @@ dulwich.clone = (git clone git://jelmer.uk/dulwich ../dulwich.git)
 dulwich.install = (cd ../dulwich.git && ./setup.py install --user)
 dulwich3.install = (cd ../dulwich.git && python3 ./setup.py install --user)
 
-[loggerhead-py2]
+[loggerhead]
 vm.release = xenial
 brz.build_deps = gcc, debhelper, python, python-all-dev, python3-all-dev, python-configobj, python3-configobj, python-docutils, python3-docutils, python-paramiko, python3-paramiko, python-subunit, python3-subunit, python-testtools, python3-testtools, subunit, cython, cython3, python-fastimport, python-dulwich
-loggerhead.build_deps = python-setuptools, python3-setuptools, libjs-yui3-min, python-docutils, python3-docutils, python-pygments, python3-pygments, python-simplejson, python3-simplejson, python-paste, python3-paste, python-pastedeploy, python3-pastedeploy, python-simpletal, python3-simpletal, python-bleach, python3-bleach
+# python3-simpletal is not available (yet) for ubuntu
+loggerhead.build_deps = python-setuptools, python3-setuptools, libjs-yui3-min, python-docutils, python3-docutils, python-pygments, python3-pygments, python-simplejson, python3-simplejson, python-paste, python3-paste, python-pastedeploy, python3-pastedeploy, python-simpletal, python-bleach, python3-bleach
 vm.packages = {brz.build_deps}, {loggerhead.build_deps}, bzr, python-junitxml
 brz.branch = (bzr branch lp:brz ../brz-trunk)
 brz.make = (cd ../brz-trunk && make)
