--- a/byov.conf
+++ b/byov.conf
@@ -6,17 +6,17 @@ vm.update = True
 dulwich.clone = (git clone git://jelmer.uk/dulwich ../dulwich.git)
 dulwich.install = (cd ../dulwich.git && ./setup.py install --user)
 dulwich3.install = (cd ../dulwich.git && python3 ./setup.py install --user)
+simpletal3.install = pip3 install http://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-5.2.tar.gz
 
 [loggerhead]
 vm.release = xenial
 brz.build_deps = gcc, debhelper, python, python-all-dev, python3-all-dev, python-configobj, python3-configobj, python-docutils, python3-docutils, python-paramiko, python3-paramiko, python-subunit, python3-subunit, python-testtools, python3-testtools, subunit, cython, cython3, python-fastimport, python-dulwich
-# python3-simpletal is not available (yet) for ubuntu
 loggerhead.build_deps = python-setuptools, python3-setuptools, libjs-yui3-min, python-docutils, python3-docutils, python-pygments, python3-pygments, python-simplejson, python3-simplejson, python-paste, python3-paste, python-pastedeploy, python3-pastedeploy, python-simpletal, python-bleach, python3-bleach
-vm.packages = {brz.build_deps}, {loggerhead.build_deps}, bzr, python-junitxml
+vm.packages = {brz.build_deps}, {loggerhead.build_deps}, bzr, python-junitxml, python3-pip
 brz.branch = (bzr branch lp:brz ../brz-trunk)
 brz.make = (cd ../brz-trunk && make)
 byoci.setup.command = ({dulwich.clone} && {dulwich.install} && {brz.branch} && {brz.make})
 byoci.tests.command = bash -o pipefail -c "bzr log -l2 && (BRZ_PLUGINS_AT=loggerhead@`pwd` BRZ_PLUGIN_PATH=-site:-user python2 ../brz-trunk/brz selftest -v --parallel=fork --subunit2 | subunit2junitxml -o ../results.xml -f | subunit2pyunit)"
 [loggerhead-py3]
-byoci.setup.command = ({dulwich.clone} && {dulwich3.install} && {brz.branch} && {brz.make})
+byoci.setup.command = ({dulwich.clone} && {dulwich3.install} && {brz.branch} && {brz.make} && {simpletal3.install})
 byoci.tests.command = bash -o pipefail -c "bzr log -l2 && (BRZ_PLUGINS_AT=loggerhead@`pwd` BRZ_PLUGIN_PATH=-site:-user python3 ../brz-trunk/brz selftest -v --parallel=fork --subunit2 | subunit2junitxml -o ../results.xml -f | subunit2pyunit)"
