--- a/byov.conf
+++ b/byov.conf
@@ -12,7 +12,8 @@ simpletal3.install = pip3 install http://www.owlfish.com/software/simpleTAL/down
 vm.release = xenial
 brz.build_deps = gcc, debhelper, python, python-all-dev, python3-all-dev, python-configobj, python3-configobj, python-docutils, python3-docutils, python-paramiko, python3-paramiko, python-subunit, python3-subunit, python-testtools, python3-testtools, subunit, cython, cython3, python-fastimport, python-dulwich, python-six, python3-six
 loggerhead.build_deps = python-setuptools, python3-setuptools, libjs-yui3-min, python-docutils, python3-docutils, python-pygments, python3-pygments, python-simplejson, python3-simplejson, python-paste, python3-paste, python-pastedeploy, python3-pastedeploy, python-simpletal, python-bleach, python3-bleach
-vm.packages = {brz.build_deps}, {loggerhead.build_deps}, bzr, python-junitxml, python3-pip
+loggerhead.test_deps = python3-fixtures, python-fixtures
+vm.packages = {brz.build_deps}, {loggerhead.build_deps}, {loggerhead.test_deps}, bzr, python-junitxml, python3-pip
 brz.branch = (bzr branch lp:brz ../brz-trunk)
 brz.make = (cd ../brz-trunk && make)
 byoci.setup.command = ({dulwich.clone} && {dulwich.install} && {brz.branch} && {brz.make})
