--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py27,py3.5
+envlist = py27,py35,py36,py37,py38
 skipsdist=True
 
 [testenv]
 deps = -rrequirements.txt
-commands = brz selftest -v breezy.plugins.loggerhead
+commands = brz selftest -v breezy.plugins.loggerhead --strict
 setenv = BRZ_PLUGINS_AT = loggerhead@{toxinidir}
