--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Paste >= 1.6
-dulwich == 0.19.16
+dulwich == 0.19.16; python_version < "3"
+dulwich; python_version >= "3"
 testtools
 breezy
 bleach
