Fix py27 and py35 tox environments.
Keeping Python 2.7 and 3.5 tests working now that they're unsupported
upstream and various core packages such as pip have dropped support for them
is getting harder, but it's still viable with a few hacks.  Loggerhead still
needs to support these versions for now.

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,11 @@ envlist = py27,py35,py36,py37,py38
 skipsdist=True
 
 [testenv]
+download =
+    py27,py35: true
 deps = -rrequirements.txt
 commands = brz selftest -v breezy.plugins.loggerhead --strict
-setenv = BRZ_PLUGINS_AT = loggerhead@{toxinidir}
+setenv =
+    py27,py35: VIRTUALENV_DOWNLOAD = 1
+    py27,py35: VIRTUALENV_PIP = 20.3.4
+    BRZ_PLUGINS_AT = loggerhead@{toxinidir}
