--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 setuptools < 45; python_version < "3"
 Paste >= 1.6
-dulwich == 0.19.16; python_version < "3"
+dulwich < 0.20; python_version < "3"
 dulwich; python_version >= "3"
 testtools
-breezy
+breezy < 3.2; python_version < "3"
+breezy ; python_version >= "3"
 bleach
 https://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-4.3.tar.gz; python_version < "3"
 https://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-5.2.tar.gz; python_version >= "3"
