On Python 2.7, install pbr before other requirements.

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,6 @@ setenv =
     py27,py35: VIRTUALENV_DOWNLOAD = 0
     py27,py35: VIRTUALENV_PIP = 20.3.4
     BRZ_PLUGINS_AT = loggerhead@{toxinidir}
+
+[testenv:py27]
+install_command = {toxinidir}/tox-scripts/py27-install {opts} {packages}
