Fix use of tox.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py35,py36,py37,py38
+envlist = py27,py36,py37,py38,py39
 skipsdist=True
 
 [testenv]
@@ -8,6 +8,7 @@ commands = brz selftest -v breezy.plugins.loggerhead --strict
 setenv =
     py27,py35: VIRTUALENV_DOWNLOAD = 0
     py27,py35: VIRTUALENV_PIP = 20.3.4
+    BRZ_PLUGIN_PATH=-user:-site
     BRZ_PLUGINS_AT = loggerhead@{toxinidir}
 
 [testenv:py27]
