--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist = py36,py37,py38,py39,py310
+envlist = py35,py36,py37,py38,py39,py310
 skipsdist=True
 
 [testenv]
 deps = -rrequirements.txt
 commands = brz selftest -v breezy.plugins.loggerhead --strict
 setenv =
+    py35: VIRTUALENV_DOWNLOAD = 0
+    py35: VIRTUALENV_PIP = 20.3.4
     BRZ_PLUGIN_PATH=-user:-site
     BRZ_PLUGINS_AT = loggerhead@{toxinidir}
