--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 setuptools
 Paste >= 1.6
-dulwich
+dulwich; python_version > "3.5"
+dulwich <= 0.20.25; python_version <= "3.5"
 testtools
-breezy >= 3.1
-bleach
+breezy >= 3.1; python_version > "3.5"
+breezy >= 3.1, < 3.2; python_version <= "3.5"
+bleach; python_version > "3.5"
+bleach < 4.0.0; python_version <= "3.5"
+packaging < 21.0; python_version <= "3.5"
 https://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-5.2.tar.gz
