--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ bleach; python_version > "3.5"
 bleach < 4.0.0; python_version <= "3.5"
 packaging < 21.0; python_version <= "3.5"
 https://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-5.2.tar.gz
-Pygments < 2.6; python_version < "3"
-Pygments; python_version >= "3"
+Pygments < 2.12; python_version <= "3.5"
+Pygments; python_version > "3.5"
+certifi < 2022.5.18; python_version <= "3.5"
+fixtures < 4.0.0; python_version <= "3.5"
