Port from SimpleTAL to Chameleon.
SimpleTAL is a painful dependency, because it has no download files on
PyPI: the only way to depend on it properly is therefore using a direct
URL reference, and as I understand it packages with such references
those can't be uploaded to PyPI.

Porting to Chameleon (Zope's default TAL implementation nowadays) turns
out not to be too difficult.  The main work involved is because it
doesn't support path expressions.  It would be possible to add those
using `z3c.pt`, and I considered that, but that has a significant
dependency tree for packages that don't already use the Zope Toolkit,
and it would have also required extra startup complexity to register
`ITraversable` adapters.  It's easier to convert path expressions to the
equivalent Python expressions, although the process of doing so was
unfortunately quite error-prone.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ git:
 matrix:
   include:
     - python: 3.5
-      env: TAL_VERSION=5.2
     - python: 3.6
-      env: TAL_VERSION=5.2
 
 script:
   - python -m coverage run -p -m unittest loggerhead.tests.test_suite
@@ -20,7 +18,7 @@ script:
 install:
   - sudo apt install subunit adduser libjs-jquery
   - travis_retry pip install -U setuptools
-  - travis_retry pip install -U pip coverage codecov flake8 testtools configobj cython testscenarios six docutils python-subunit dulwich bzr+lp:brz pygments paste http://www.owlfish.com/software/simpleTAL/downloads/SimpleTAL-$TAL_VERSION.tar.gz bleach
+  - travis_retry pip install -U pip coverage codecov flake8 testtools configobj cython testscenarios six docutils python-subunit dulwich bzr+lp:brz pygments paste Chameleon bleach
 
 after_success:
   - codecov
