Fix running tests in tox.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py35,py36,py37,py38,py39,py310
 skipsdist=True
 
 [testenv]
-deps = -rrequirements.txt
+deps =
+    -rrequirements.txt
+    .
 commands = brz selftest -v breezy.plugins.loggerhead --strict
 setenv =
     py35: VIRTUALENV_DOWNLOAD = 0
