Pin patiencediff < 0.2.3 on Python 3.5.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ Pygments < 2.12; python_version <= "3.5"
 Pygments; python_version > "3.5"
 certifi < 2022.5.18; python_version <= "3.5"
 fixtures < 4.0.0; python_version <= "3.5"
+patiencediff < 0.2.3; python_version <= "3.5"
