--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ content-type = "text/x-rst"
 [project.optional-dependencies]
 proxied = ["PasteDeploy>=1.3"]
 flup = ["flup"]
+dev = ["fixtures"]
 
 [tool.setuptools]
 script-files = ["loggerhead-serve"]
