--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "loggerhead"
-version = "2.0.2.dev0"
+version = "2.0.3"
 description = "Loggerhead is a web viewer for projects in bazaar"
 license = {text = "GNU GPL v2 or later"}
 maintainers = [{name = "Michael Hudson", email = "michael.hudson@canonical.com"}]
